# quality_for_students

./: .gitignore  Makefile  README.MD  bad_code.py  pyproject.toml  requirements.txt  setup.cfg  tasks.py
.github/workflows/: ci.yml
app/: __init__.py  user_bad_code.py
tests/unit/: __init__.py  test_user_bad_code.py
