[tool.poetry]
name = "quality_for_students"
version = "0.1.0"
description = ""
authors = ["Alex Alex <Alex@Alex.com>"]
license = "AGPL-3.0"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
invoke = "^1.5.0"
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
black = "^20.8b1"
wemake-python-styleguide = "^0.14.1"
safety = "^1.10.2"
mypy = "^0.790"


[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = [".cache", ".venv", ".mypy_cache"]

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.cache
    | _build
    | buck-out
    | build
    | dist
    | .mypy_cache
  )/
)
'''
